--- a/res/layout/activity_new.xml
+++ b/res/layout/activity_new.xml
@@ -6,18 +6,18 @@
     android:background="#000000" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textView_name_newActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="104dp"
-        android:text="Name"
+        android:text="@string/activity_name"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#2b8787" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/editText_name_newActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
