--- a/res/layout/activity_activity_details_list.xml
+++ b/res/layout/activity_activity_details_list.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="0dp"
-    android:background="#2b8787"
+    android:background="@color/app_theme_color"
     tools:context="${relativePackage}.${activityClass}">
 </ListView>
