--- a/res/layout/activity_item.xml
+++ b/res/layout/activity_item.xml
@@ -2,7 +2,7 @@
     android:id="@+id/listItemView"
     android:layout_width="match_parent"
     android:orientation="horizontal" 
-    android:layout_height="64dp"
+    android:layout_height="20dp"
     android:layout_margin="0dp"
     android:layout_marginBottom="2dp"
     android:padding="0dp"
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:textColor="#ffffff"
        	android:text="hello"
-       	android:textSize="40dp"/>
+       	android:textSize="14sp"/>
             
     
 </LinearLayout>
