--- a/res/layout/activity_reports_list.xml
+++ b/res/layout/activity_reports_list.xml
@@ -1,3 +1,6 @@
+
+
+<!--   Old Working Code
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/reportsListView"
@@ -7,3 +10,30 @@
     android:background="#2b8787"
     tools:context="${relativePackage}.${activityClass}">
 </ListView>
+-->
+
+<!--  <?xml version="1.0" encoding="utf-8"?> -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+    
+    <ListView
+	    android:id="@+id/reportsListView"
+	    android:layout_width="match_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="10"
+	    android:background="#2b8787"
+	    tools:context="${relativePackage}.${activityClass}">
+	</ListView>
+	
+    <Button 
+        android:id="@+id/graphButton"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="@string/view_Graphs"
+        android:onClick="graphButtonHandler"/>
+
+</LinearLayout>
