--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:background="#000000"
     tools:context="${relativePackage}.${activityClass}" >
 
-    <!--  
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
@@ -15,10 +14,10 @@
         android:layout_marginTop="88dp"
         android:text="Activity Tracker"
         android:textColor="#00ccff"
+       	android:gravity="center"
         android:textSize="28dp" />
 
-	-->
-
+    <!--  
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
@@ -26,6 +25,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="62dp"
-        android:src="@drawable/ic_transparent_org" />
+        android:src="@drawable/ic_transparent_2b8787" />
+
+	-->
 	
 </RelativeLayout>
