--- a/res/layout/activity_reports_list.xml
+++ b/res/layout/activity_reports_list.xml
@@ -24,16 +24,18 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="0dp"
 	    android:layout_weight="10"
-	    android:background="#2b8787"
 	    tools:context="${relativePackage}.${activityClass}">
 	</ListView>
 	
     <Button 
         android:id="@+id/graphButton"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+	    android:layout_height="0dp"
+	    android:layout_weight="1"
         android:text="@string/view_Graphs"
+	    android:padding="10dp"
+	    android:background="@drawable/my_button"
+	    android:textColor="#ffffff"
         android:onClick="graphButtonHandler"/>
 
 </LinearLayout>
