--- a/res/layout/reports_item.xml
+++ b/res/layout/reports_item.xml
@@ -2,43 +2,47 @@
     android:id="@+id/reportItemView"
     android:layout_width="match_parent"
     android:orientation="horizontal" 
-    android:layout_height="64dp"
-    android:layout_margin="0dp"
-    android:layout_marginBottom="2dp"
-    android:padding="0dp">
-    
+    android:layout_height="40sp"
+    android:layout_marginTop="5sp"
+    android:layout_marginBottom="15sp"
+    android:padding="0dp"
+    android:background="#2b8787">
         
    <TextView 
    		android:id="@+id/activityName"
-        android:layout_width="0dip"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:textColor="#ffffff"
        	android:text="Date"
-       	android:textSize="25dp"
-       	android:layout_marginRight="5dp"
+        android:layout_width="0dip"
+        android:layout_weight="4"
+        android:layout_height="match_parent"
+        android:textColor="#ffffff"
+       	android:textSize="15sp"
+       	android:layout_marginLeft="2sp"
+       	android:gravity="center_vertical"
+       	android:layout_marginRight="2sp"
        	android:background="#282828"/>
+   
    <TextView 
    		android:id="@+id/activityTotalTime"
-        android:layout_width="0dip"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:textColor="#ffffff"
        	android:text="Time"
-       	android:textSize="25dp"
-       	android:layout_marginRight="5dp"
+        android:layout_width="0dip"
+        android:layout_weight="2"
+        android:layout_height="match_parent"
+        android:textColor="#ffffff"
+       	android:textSize="15sp"
+       	android:layout_marginRight="2sp"
+       	android:gravity="center"
        	android:background="#282828"/>
+   
    <TextView 
    		android:id="@+id/activityPercentage"
         android:layout_width="0dip"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:textColor="#ffffff"
-       	android:text="Duration"
-       	android:textSize="25dp"
+       	android:textSize="15sp"
+       	android:layout_marginRight="2sp"
+       	android:gravity="center"
        	android:background="#282828"/>
-   
-   
             
     
 </LinearLayout>
