--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,28 +5,40 @@
     android:background="#000000"
     tools:context="${relativePackage}.${activityClass}" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="88dp"
-        android:text="Activity Tracker"
-        android:textColor="#00ccff"
-       	android:gravity="center"
-        android:textSize="28dp" />
+    <!-- 
+    
 
-    <!--  
+    --> 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="62dp"
-        android:src="@drawable/ic_transparent_2b8787" />
+        android:layout_marginTop="162sp"
+        android:src="@drawable/ic_launcher" />
 
-	-->
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:text="Activity Tracker"
+        android:textColor="#00ccff"
+        android:textSize="28dp" />
+
+    <!-- 
+    <TextSwitcher
+        android:id="@+id/textSwitcher1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_centerVertical="true" >
+
+    </TextSwitcher>
+    
+    -->
 	
 </RelativeLayout>
