--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:gravity="center"
-        android:text="Activity Tracker"
+        android:text="Ten Thousand Hours"
         android:textColor="#00ccff"
         android:textSize="28dp" />
 
